--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta name="autor" content="Sabrina Rabhi">
         <meta name="description" content="Site E-commerce">
-        <title> allandbe {% block title %} {% endblock %}</title> 
+        <title> AllandBe {% block title %} {% endblock %}</title> 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="icon" type="image/png" href="{{ asset('images/logo/logo.png')}}"/>
         <link rel="stylesheet" href="{{ asset( "css/styleBase.css") }}">
@@ -48,30 +48,32 @@
             </section>
         </header>
 
-        <nav>
-            <ul>
-                <li>
-                    <a href="">Page 1</a>
-                </li>
-                <li>
-                    <a href="">Page 2</a>
-                </li>
-                <li>
-                    <a href="">Page 3</a>
-                </li>
-                <li>
-                    <a href="">Page 4</a>
-                </li>
-                <li>
-                    <a href="">Page 5</a>
-                </li>
-            </ul>
-        </nav> 
+        <main>
+            <h1>{% block titlePage %} {% endblock %}</h1>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
+                    <div class="navbar-nav">
+                      <a class="nav-link border col-2" href="{{ path('brand_register')}}">Entreprise</a>
+                      <a class="nav-link border col-2" href="{{ path('brand_publish_docs')}}">Documents KYC</a>
+                      <a class="nav-link border col-2" href="{{ path('brand_sign')}}">Contrat</a>                 
+                      <a class="nav-link border col-2" href="#">Stock</a>
+                      <a class="nav-link border col-2" href="#">Facturation</a>
+                      <a class="nav-link border col-2" href="{{ path('brand_signin')}}">Activation</a>
+                      
+                      
+
+                     
+                    </div>
+                  </div>
+                </div>
+            </nav>
+
+            <p class="text-center"> Dans la barre d'état, cliquer sur l'étape que vous souhaiter terminer</p>
 
         {% block body %}
          
         {% endblock %}
-
+    </main>
 
         <footer class="container-fluid">
             <div class="container">
