--- a/templates/brand/index.html.twig
+++ b/templates/brand/index.html.twig
@@ -1,8 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}brand-accueil{% endblock %}
+{% block titlePage %}
+   <p class="text-center p-5">Espace de gestion des marques</p>
+ {% endblock %}
 
 {% block body %}
-<h1 class="text-center p-5">All And Be </h1>
+
 
 {% endblock %}
